Inserindo logo e nome, como SkillPRO

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="%PUBLIC_URL%/crm.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logoSkillPro.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CRM - Course</title>
+    <title>SkillPro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
